--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "NAZRUL",
-  "version": "10.1.1",
+  "name": "islsmick-chat",
+  "version": "20.0.1",
   "description": "MODE BY NAZRUL",
   "main": "TINA.js",
   "engines": {
@@ -14,24 +14,15 @@
   },
   "repository": {
       "type": "git",
-      "url": "https://github.com/Priyansh-11/Priyansh-bot/issues"
+      "url": "https://github.com/mr-nazrul-404/islamick-chat/git"
   },
-  "keywords": [
-      "bot",
-      "facebook",
-      "projectpriyansh",
-      "messenger",
-      "javascript",
-      "priyanshu",
-      "prince",
-      "mental"
-  ],
-  "author": "𝐏𝐫𝐢𝐲𝐚𝐧𝐬𝐡 𝐑𝐚𝐣𝐩𝐮𝐭",
+  
+  "author": "md nazrul islam",
   "license": "GPL-3.0",
   "bugs": {
-      "url": "https://github.com/Priyansh-11/Priyansh-bot/issues"
+      "url": "https://github.com/mr-nazrul-404/islamick-chat/issues"
   },
-  "homepage": "https://github.com/Priyansh-11/Priyansh-bot/issues",
+  "homepage": "https://github.com/mr-nazrul-404/islamick-chat/issues",
   "dependencies": {
       "@distube/ytdl-core": "^4.13.2",
       "@miraipr0ject/assets": "^1.0.9",
@@ -64,6 +55,7 @@
       "googlethis": "^1.2.9",
       "idioms": "0.0.2",
       "image-downloader": "^4.3.0",
+      "imgur": "^2.3.0",
       "jimp": "^0.16.13",
       "knights-canvas": "^1.3.7-a",
       "listen": "^1.0.1",
@@ -75,6 +67,7 @@
       "moment-timezone": "^0.5.37",
       "movie-info": "^2.0.5",
       "ms": "^2.1.3",
+      "nayan-videos-downloader": "^0.0.9",
       "nhentai-api": "^3.4.3",
       "node-cron": "^3.0.2",
       "node-fetch": "^2.6.9",
@@ -90,8 +83,6 @@
       "path": "^0.12.7",
       "pidusage": "^3.0.0",
       "ping-monitor": "^0.6.2",
-      "priyansh-fb-downloader": "^2.0.0",
-      "priyansh-ig-downloader": "^2.0.2",
       "random-cat-img": "^1.0.4",
       "readline": "^1.3.0",
       "request": "^2.88.2",
@@ -111,10 +102,13 @@
       "vtuber-wiki": "^1.1.5",
       "websocket-stream": "^5.5.2",
       "wikijs": "^6.3.3",
-      "youtube-search-api": "^1.1.0",
+      "ws3-fca": "^1.0.23",
+      "youtube-search-api": "^1.1.1",
       "youtubei.js": "^1.4.5",
       "yt-search": "^2.10.4",
-      "ytdl-core": "^4.11.2",
+      "ytdl-core": "^4.11.4",
+      "unofficial-fb-chat-api": "^1.0.0",
       "zalgo": "0.0.1"
   }
 }
+ 
